force-app/main/default/objects/Producto__c/Producto__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena los diferentes registros de comida del restaurante</description>
    <label>Producto</label>
    <nameField>
        <label>Nombre del producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>