force-app/main/default/objects/Producto__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrada</fullName>
            </value>
            <value>
                <fullName>Especialidad</fullName>
            </value>
            <value>
                <fullName>Plato Fuerte</fullName>
            </value>
            <value>
                <fullName>Bebida</fullName>
            </value>
            <value>
                <fullName>Postre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>