force-app/main/default/objects/Producto__c/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <label>Imagen</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>