force-app/main/default/objects/Producto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <columns>Precio__c</columns>
    <columns>Status__c</columns>
    <columns>Descripcion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>